knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/texcellency__DHCFieldMapping__c/texcellency__DHCFieldMapping__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Defines the mapping between source entity in DefinitiveHC database onto standard or custom fields in one of the supported standard objects in Salesforce.</description>
    <label>DHC Field Mapping</label>
</CustomObject>