knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/texcellency__DHCFieldMapping__c/fields/texcellency__Destination__c.field-meta.xml
<CustomField>
    <fullName>texcellency__Destination__c</fullName>
    <description>Destination field of the standard object to which the source value is mapped.</description>
    <inlineHelpText>Destination field of the standard object to which the source value is mapped.</inlineHelpText>
    <label>Destination</label>
    <length>60</length>
    <type>Text</type>
</CustomField>