knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/texcellency__DHCFieldMapping__c/fields/texcellency__Enabled__c.field-meta.xml
<CustomField>
    <fullName>texcellency__Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enables or disables a mapping.</description>
    <inlineHelpText>Enables or disables a mapping.</inlineHelpText>
    <label>Enabled</label>
    <type>Checkbox</type>
</CustomField>