knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/texcellency__DHCFieldMapping__c/fields/texcellency__Mask__c.field-meta.xml
<CustomField>
    <fullName>texcellency__Mask__c</fullName>
    <description>Mask value controls when a mapping is applied to a Standard Object Record.</description>
    <inlineHelpText>Mapping applicability is controlled by certain flags. Currently supported:
Skip new  = 1
Skip updating = 2
Skip if Source != DHC = 4
Skip if Source != DHC &amp;&amp; Field Not Empty = 8
Turn off multiple flags by setting the Mask to sum of indiv. values</inlineHelpText>
    <label>Mask</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>