knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/texcellency__DHCFieldMapping__c/fields/texcellency__Source__c.field-meta.xml
<CustomField>
    <fullName>texcellency__Source__c</fullName>
    <description>Source field from the API entity which provides the value for the destination field.</description>
    <inlineHelpText>Source field from the API entity which provides the value for the destination field.</inlineHelpText>
    <label>Source</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>