knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/texcellency__DHCFieldMapping__c/fields/texcellency__StdObjType__c.field-meta.xml
<CustomField>
    <fullName>texcellency__StdObjType__c</fullName>
    <defaultValue>&quot;A&quot;</defaultValue>
    <description>Indicates the standard object type to which this mapping applies to.</description>
    <inlineHelpText>Indicates the standard object type to which this mapping applies to.
A - Account
C - Contact
L - Lead
O - Opportunity.</inlineHelpText>
    <label>Standard Object Type</label>
    <length>1</length>
    <required>true</required>
    <type>Text</type>
</CustomField>